# SentimentAnalysisInMentalHealth

./: README.md  needleman_wunsch.ipynb  pyproject.toml  wcc_constant.ipynb  wcc_float.ipynb  wcc_float_BERT.ipynb
tests/: test_model.ipynb  test_needleman_wunch.ipynb
utils/: function.py  process_dataframe.py  wcc.py
