[tool.poetry]
name = "sentimentanalysisinmentalhealth"
version = "0.1.0"
description = "packeage to analyse sequential sentiments"
authors = ["Lucas de Matos Vasconcelos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.13.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
